css/style.css
/* || General Styles  */

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

button {
  cursor: pointer;
}

body {
  font-family: sans-serif;
}

/* || Overall Style */

main {
  min-height: 100vh;
  background-color: #2c3333;
  display: flex;
  justify-content: center;
  align-items: center;
}

.container {
  display: flex;
}

.canvas {
  height: 450px;
  width: 450px;
  background-color: #fff;
  display: flex;
  flex-wrap: wrap;
  align-content: flex-start;
}

.pixel {
  flex: 1 1 auto;
}

.toolbar {
  background-color: #2e4f4f;
  width: 250px;
  display: flex;
  flex-direction: column;
}

.tools {
  border-bottom: 1px solid #cbe4de;
  display: flex;
  flex-direction: column;
  gap: 12px;
  padding: 28px 24px;
}

#picked-color {
  display: inline-block;
  height: 10px;
  width: 10px;
  background-color: black;
  margin-right: 3px;
}

.status {
  padding: 17px 24px;
  flex: 1 1 auto;
}

.status__info {
  color: #cbe4de;
  font-size: 14px;
  margin-bottom: 10px;
}

/* || Utilities  */

.btn {
  background-color: #cbe4de;
  border: none;
  color: #2c3333;
  padding: 10px 22px;
  border-radius: 4px;
  transition: all 0.2s ease;
}

.btn:hover {
  background-color: #bfd4cf;
}

.btn--active,
.btn--active:hover {
  /* active button wont have a hover effect  */
  background-color: #0e8388;
  color: #fff;
}

